Fixed text out of bounds in dachboard cards. It's better but still buggy on small screens

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2026,7 +2026,11 @@ th {
     }
 }
 
+.dashboard-halfStatsRow {
+    padding-bottom: 4rem;
+}
 .dashboard-card {
+    padding-bottom: 6rem;
     border-radius: 25px;
     background: $color_background;
     background: $color_secondary_1;
